--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "build": "cd web-app && npm run build",
+    "build": "cd web-app && npm install && npm run build",
     "dev": "cd web-app && npm run dev",
     "install-web": "cd web-app && npm install"
   }
