--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,59 +1,38 @@
-#  LUGN & TRYGG BACKEND - PRODUCTION REQUIREMENTS (Python 3.13 Compatible)
-# Simplified for Render deployment - only essential packages
+# 📌 Backend: API, Databas och Autentisering
+firebase-admin>=6.0.1  # Firebase Admin SDK för autentisering och Firestore
+python-dotenv==1.0.0  # Laddar miljövariabler från .env-fil
+requests==2.28.1  # HTTP-bibliotek för API-förfrågningar
+flask==2.2.2  # Mikro-webbramverk för API och backend-logik
+flask-cors==4.0.0  # CORS-hantering för Flask-applikationer
+flask-limiter==3.5.0  # Rate limiting för Flask-API:er
+werkzeug==2.2.2  # WSGI-verktyg för Flask-applikationer
+jinja2==3.1.2  # Mallmotor för rendering av HTML-sidor i Flask
+itsdangerous==2.1.2  # Säker hantering av dataöverföring i API:er
+click==8.1.3  # Kommandoradsgränssnitt för Flask-applikationer
+bcrypt==4.0.1  # Hashning av lösenord för säker lagring
+cryptography>=3.4.0  # Kryptografi för säker kryptering och dekryptering
 
-# Core Flask
-flask==3.0.3
-flask-cors==4.0.0
-gunicorn>=21.2.0
-werkzeug>=3.0.0
+# 📌 Röststyrning & Ljudhantering
+pyttsx3==2.90  # Text-till-tal-konvertering
+SpeechRecognition==3.8.1  # Taligenkänning via mikrofon
+pyaudio==0.2.13  # PortAudio-bibliotek för ljudinspelning och uppspelning
+whisper==1.1.10  # OpenAI:s system för automatisk taligenkänning (ASR)
+sounddevice==0.4.5  # Bindningar för PortAudio-biblioteket
+soundfile==0.11.0  # Ljudfilsbehandling
+torch==2.0.0  # För avancerade ljudmodeller
+torchaudio==2.0.0  # Ljudbehandling med PyTorch
+vosk==0.3.45  # Offline taligenkänning för svenska
 
-# Firebase Admin SDK
-firebase-admin>=6.4.0
+# 📌 AI och Machine Learning
+openai>=1.0.0  # OpenAI API för avancerade AI-funktioner
+google-cloud-language>=2.0.0  # Google Cloud Natural Language API
+google-cloud-speech>=2.0.0  # Google Cloud Speech-to-Text API
+torch>=2.0.0  # PyTorch för avancerade ML-modeller
+transformers>=4.21.0  # Hugging Face Transformers för NLP-modeller
+scikit-learn>=1.3.0  # Machine Learning för prediktiv analys
+pandas>=2.0.0  # Dataanalys för användarbeteende
+numpy>=1.24.0  # Numeriska beräkningar
 
-# Environment & utilities
-python-dotenv>=1.0.0
-requests>=2.31.0
-
-# Authentication & security
-bcrypt>=4.1.0
-PyJWT>=2.8.0
-flask-jwt-extended>=4.7.0
-
-# Rate limiting & caching
-redis>=5.0.0
-flask-limiter>=3.7.0
-
-# Scheduling for background tasks
-schedule>=1.2.0
-
-# Internationalization
-Flask-Babel>=4.0.0
-
-# AI & Data Science packages
-numpy>=1.21.0
-scipy>=1.11.0
-scikit-learn>=1.3.0
-pandas>=2.2.0
-
-# Email service
-resend>=2.17.0
-
-# OpenAI API
-openai>=1.0.0
-
-# Google Cloud APIs
-google-cloud-speech>=2.21.0
-google-cloud-language>=2.11.0
-
-# Pydantic for validation
-pydantic>=2.0.0
-
-# Additional utilities
-cryptography>=41.0.0
-APScheduler>=3.10.0
-psutil>=5.9.0
-prometheus-client>=0.20.0
-bleach>=6.0.0
-apispec>=6.0.0
-marshmallow>=3.20.1,<4.0.0
-flask-apispec>=0.11.0
+# 📌 Testning och Debugging
+pytest>=7.0.0  # Enhetstestning av backend och funktionalitet
+selenium>=4.0.0  # Automatiserad testning av UI i frontend
