--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,18 @@
-# 📌 Backend: API, Databas och Autentisering
-firebase-admin>=6.0.1  # Firebase Admin SDK för autentisering och Firestore
-python-dotenv==1.0.0  # Laddar miljövariabler från .env-fil
-requests==2.28.1  # HTTP-bibliotek för API-förfrågningar
-flask==2.2.2  # Mikro-webbramverk för API och backend-logik
-flask-cors==4.0.0  # CORS-hantering för Flask-applikationer
-flask-limiter==3.5.0  # Rate limiting för Flask-API:er
-werkzeug==2.2.2  # WSGI-verktyg för Flask-applikationer
-jinja2==3.1.2  # Mallmotor för rendering av HTML-sidor i Flask
-itsdangerous==2.1.2  # Säker hantering av dataöverföring i API:er
-click==8.1.3  # Kommandoradsgränssnitt för Flask-applikationer
-bcrypt==4.0.1  # Hashning av lösenord för säker lagring
-cryptography>=3.4.0  # Kryptografi för säker kryptering och dekryptering
+# Monitoring and Analytics Dependencies
+prometheus-client==0.19.0
+psutil==5.9.6
+sentry-sdk[flask]==1.39.2
 
-# 📌 Röststyrning & Ljudhantering
-pyttsx3==2.90  # Text-till-tal-konvertering
-SpeechRecognition==3.8.1  # Taligenkänning via mikrofon
-pyaudio==0.2.13  # PortAudio-bibliotek för ljudinspelning och uppspelning
-whisper==1.1.10  # OpenAI:s system för automatisk taligenkänning (ASR)
-sounddevice==0.4.5  # Bindningar för PortAudio-biblioteket
-soundfile==0.11.0  # Ljudfilsbehandling
-torch==2.0.0  # För avancerade ljudmodeller
-torchaudio==2.0.0  # Ljudbehandling med PyTorch
-vosk==0.3.45  # Offline taligenkänning för svenska
+# Optional: Additional monitoring tools
+datadog==0.48.0
+newrelic==9.7.0
+opentelemetry-distro==0.43b0
+opentelemetry-instrumentation-flask==0.43b0
 
-# 📌 AI och Machine Learning
-openai>=1.0.0  # OpenAI API för avancerade AI-funktioner
-google-cloud-language>=2.0.0  # Google Cloud Natural Language API
-google-cloud-speech>=2.0.0  # Google Cloud Speech-to-Text API
-torch>=2.0.0  # PyTorch för avancerade ML-modeller
-transformers>=4.21.0  # Hugging Face Transformers för NLP-modeller
-scikit-learn>=1.3.0  # Machine Learning för prediktiv analys
-pandas>=2.0.0  # Dataanalys för användarbeteende
-numpy>=1.24.0  # Numeriska beräkningar
+# Health check dependencies
+requests==2.31.0
+redis==5.0.1
 
-# 📌 Testning och Debugging
-pytest>=7.0.0  # Enhetstestning av backend och funktionalitet
-selenium>=4.0.0  # Automatiserad testning av UI i frontend
+# Metrics and logging
+structlog==23.2.0
+python-json-logger==2.0.7
