--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ redis==5.0.1
 
 # Metrics and logging
 structlog==23.2.0
-python-json-logger==2.0.7"# Updated requirements.txt for backend deployment"  
+python-json-logger==2.0.7
