--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,21 @@
+# Core Flask Application Dependencies
+flask==2.2.2
+firebase-admin>=6.0.1
+python-dotenv==1.0.0
+requests==2.28.1
+flask-cors==4.0.0
+flask-limiter==3.5.0
+werkzeug==2.2.2
+jinja2==3.1.2
+itsdangerous==2.1.2
+click==8.1.3
+bcrypt==4.0.1
+cryptography>=3.4.0
+pyttsx3==2.90
+SpeechRecognition==3.8.1
+pyaudio==0.2.13
+gunicorn==21.2.0
+
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
 psutil==5.9.6
@@ -10,7 +28,6 @@ opentelemetry-distro==0.43b0
 opentelemetry-instrumentation-flask==0.43b0
 
 # Health check dependencies
-requests==2.31.0
 redis==5.0.1
 
 # Metrics and logging
