--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.3
 bcrypt==4.0.1
 cryptography>=41.0.0
 gunicorn==21.2.0
+schedule==1.2.0
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
