--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cryptography>=41.0.0
 gunicorn==21.2.0
 schedule==1.2.0
 bleach==6.1.0
+flask-jwt-extended==4.6.0
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
