--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ gunicorn==21.2.0
 schedule==1.2.0
 bleach==6.1.0
 flask-jwt-extended==4.6.0
+numpy==1.26.4
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
