--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ schedule==1.2.0
 bleach==6.1.0
 flask-jwt-extended==4.6.0
 numpy==1.26.4
+pydantic==1.10.13
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
