--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ bleach==6.1.0
 flask-jwt-extended==4.6.0
 numpy==1.26.4
 pydantic==1.10.13
+apispec==6.3.0
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
