--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ flask-jwt-extended==4.6.0
 numpy==1.26.4
 pydantic==1.10.13
 apispec==6.3.0
+marshmallow==3.20.1
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
