--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ numpy==1.26.4
 pydantic==1.10.13
 apispec==6.3.0
 marshmallow==3.20.1
+flask-apispec==0.11.4
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
