--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pydantic==1.10.13
 apispec==6.3.0
 marshmallow==3.20.1
 flask-apispec==0.11.4
+pandas==2.1.3
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
