--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ apispec==6.3.0
 marshmallow==3.20.1
 flask-apispec==0.11.4
 pandas>=2.2.0
+scikit-learn==1.5.2
 
 # Monitoring and Analytics Dependencies
 prometheus-client==0.19.0
