--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sentry/react": "^7.80.1",
     "@types/amplitude-js": "^8.16.5",
     "@types/lodash": "^4.17.20",
+    "@vitest/coverage-v8": "^4.0.4",
     "amplitude-js": "^8.21.9",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
@@ -49,6 +50,10 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.14.7",
     "@playwright/test": "^1.40.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/crypto-js": "^4.2.1",
     "@types/cypress": "^0.1.6",
     "@types/node": "^20.10.4",
