--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jsdom": "^23.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.44.0",
     "typescript": "^5.9.3",
     "vite": "^5.4.21",
     "vitest": "^1.0.4"
