--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob: data: https://cdnjs.cloudflare.com https://www.gstatic.com https://*.googleapis.com https://*.firebaseapp.com https://www.googletagmanager.com https://googletagmanager.com https://*.sentry.io https://api.amplitude.com https://*.amplitude.com https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com data:; img-src 'self' data: https: blob:; connect-src 'self' https://www.lugntrygg.se https://*.googleapis.com https://*.firebaseapp.com https://*.firebaseio.com https://region1.google-analytics.com https://www.googletagmanager.com https://googletagmanager.com https://*.sentry.io https://api.amplitude.com https://*.amplitude.com https://unpkg.com; object-src 'none'; frame-ancestors 'none';"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: data: blob:; style-src 'self' 'unsafe-inline' https:; font-src 'self' https: data:; img-src 'self' data: https: blob:; connect-src 'self' https: wss: ws:; object-src 'none'; frame-ancestors 'none';"
         }
       ]
     }
