--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -61,7 +61,7 @@ google-cloud-firestore>=2.0.0
 
 # Email Services
 sendgrid>=6.0.0
-resend>=0.7.0
+resend==0.7.2
 
 # Data Validation
 pydantic==1.10.13
